--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "react-apexcharts": "^1.4.0",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.4.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
